[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Dasha Bulanova <daria.bulanova@hellofresh.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
